--- a/CW/week19/Todo Project/templates/Home/todo_list.html
+++ b/CW/week19/Todo Project/templates/Home/todo_list.html
@@ -3,6 +3,10 @@
 
 {% block content %}
     <div class="card">
-        {{ todos }}
+    {% for todo in todos %}
+        <a href="{% url 'todo_detail' todo.id %}">
+        {{ todo }}
+        </a>
+    {% endfor %}
     </div>
 {% endblock %}
