--- a/CW/week19/Todo Project/templates/Home/todo_detail.html
+++ b/CW/week19/Todo Project/templates/Home/todo_detail.html
@@ -5,4 +5,16 @@
     <div class="card">
         {{ todo }}
     </div>
+
+    <div class="card">
+        <form action="{% url 'todo_detail' todo.id %}" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="col-md-4">
+                <button type="submit" class="btn btn-success" name="update">
+                    <i class="bi bi-plus-square"></i>
+                </button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
