chore: show todo field

--- a/CW/week19/Todo Project/templates/Home/todo_list.html
+++ b/CW/week19/Todo Project/templates/Home/todo_list.html
@@ -3,10 +3,13 @@
 
 {% block content %}
     <div class="card">
-    {% for todo in todos %}
-        <a href="{% url 'todo_detail' todo.id %}">
-        {{ todo }}
-        </a>
-    {% endfor %}
+        {% for todo in todos %}
+            <a href="{% url 'todo_detail' todo.id %}">
+                {% if request.user == todo.user %}
+                    {{ todo.title }}
+                    {{ todo.description }}
+                {% endif %}
+            </a>
+        {% endfor %}
     </div>
 {% endblock %}
