--- a/CW/week19/Todo Project/templates/Home/todo_detail.html
+++ b/CW/week19/Todo Project/templates/Home/todo_detail.html
@@ -12,7 +12,7 @@
             {{ form.as_p }}
             <div class="col-md-4">
                 <button type="submit" class="btn btn-success" name="update">
-                    <i class="bi bi-plus-square"></i>
+                    Submit
                 </button>
             </div>
         </form>
