--- a/CW/week16/task_management/templates/base.html
+++ b/CW/week16/task_management/templates/base.html
@@ -46,6 +46,7 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'search' %}">Search</a></li>
                 {% if request.user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Profile</a></li>
                 {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
