chore: handel messages

--- a/CW/week16/task_management/templates/user/changePass.html
+++ b/CW/week16/task_management/templates/user/changePass.html
@@ -5,6 +5,13 @@
 {% block content %}
     <div class="content-wrapper">
         <div class="container px-4 px-lg-5">
+            {% if messages %}
+                {% for message in messages %}
+                    <div id="msg" class="alert {{ message.tags }}" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
                 <form action="" method="POST">
                     {% csrf_token %}
@@ -12,14 +19,11 @@
                         {{ form.as_p }}
                     </div>
                     <div class="card-footer d-flex justify-content-between">
-                        <button type="submit" class="btn btn-primary me-2">Submit</button>
+                        <button type="submit" class="btn btn-primary me-2">Change Password</button>
                     </div>
                 </form>
-                <div class="card-footer d-flex justify-content-between">
-                    <button type="button" class="btn btn-primary me-2"><a hidden="{% url 'change_pass' %}">Change
-                        Password</button>
-                </div>
             </div>
         </div>
+    </div>
     </div>
 {% endblock %}
