--- a/CW/week16/task_management/templates/task/tasks_list.html
+++ b/CW/week16/task_management/templates/task/tasks_list.html
@@ -12,25 +12,8 @@
                     <div class="col-md-10">
                         <div class="card p-3 py-4" style="background: rgba(50, 100, 150, .3)">
                             <div class="mt-3">
-                                <a data-toggle="collapse" href="#collapseExample" role="button"
-                                   aria-expanded="false"
-                                   aria-controls="collapseExample"
-                                   class="advanced text-decoration-none text-light"> Add new task
-                                    <i class="fa fa-angle-down"></i>
+                                <a href="{% url 'create_task' %}"> Add new task
                                 </a>
-                                <div class="collapse" id="collapseExample">
-                                    <div class="card card-body">
-                                        <form action="{% url 'task_list' %}" method="POST">
-                                            {% csrf_token %}
-                                            {% for field in form %}
-                                                <div class="fieldWrapper">
-                                                    {{ field.errors }}
-                                                    {{ field.label_tag }} {{ field }}
-                                                </div>
-                                            {% endfor %}
-                                        </form>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
