--- a/CW/week16/task_management/templates/task/task_detail.html
+++ b/CW/week16/task_management/templates/task/task_detail.html
@@ -44,29 +44,8 @@
                             </div>
                         </div>
                         <div class="mt-3">
-                            <a data-toggle="collapse" href="#collapseExample2" role="button"
-                               aria-expanded="false"
-                               aria-controls="collapseExample2"
-                               class="advanced text-decoration-none text-light">Add new task
-                                <i class="fa fa-angle-down"></i>
+                            <a href="{% url 'update_task' task.id %}">Update Task
                             </a>
-                            <div class="collapse" id="collapseExample2">
-                                <div class="card card-body">
-                                    <form action="{% url 'task_detail' task.id %}" method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="update_task" value="create_tag">
-                                        {% for field in form2 %}
-                                            <div class="fieldWrapper">
-                                                {{ field.errors }}
-                                                {{ field.label_tag }} {{ field }}
-                                            </div>
-                                        {% endfor %}
-                                        <div class="col-md-4">
-                                            <button class="btn btn-secondary btn-block">Update task</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
