--- a/CW/week21/MusicPlayer/templates/base.html
+++ b/CW/week21/MusicPlayer/templates/base.html
@@ -8,14 +8,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+          integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <!-- Title -->
     <title>One Music - Modern Music HTML5 Template</title>
     <!-- Favicon -->
     <link rel="icon" href="{% static 'img/core-img/favicon.ico' %}">
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+    <style>
+        .row {
+            align-content: space-around !important;
+            align-items: center !important;
+            justify-content: center !important;
+        }
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.9.5/htmx.min.js"></script>
 </head>
 
 <body>
@@ -38,7 +55,7 @@
                 <nav class="classy-navbar justify-content-between" id="oneMusicNav">
 
                     <!-- Nav brand -->
-                    <a href="base.html" class="nav-brand"><img src=url({% static 'img/core-img/logo.png' %}) alt=""></a>
+                    <a href="base.html" class="nav-brand"><img src={% static 'img/core-img/logo.png' %} alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -56,10 +73,10 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="base.html">Home</a></li>
+                                <li><a href="{% url 'song:home' %}">Home</a></li>
                                 <li><a href="albums-store.html">Songs</a></li>
                                 <li><a href="event.html">Artists</a></li>
-                                <li><a href="blog.html">Bands</a></li>
+                                <li><a href="song/blog.html">Bands</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                                 <li><a href="elements.html">Profile</a></li>
                                 {% if request.user.is_authenticated %}
@@ -76,9 +93,6 @@
                                     </div>
                                 {% endif %}
                                 <!-- Cart Button -->
-                                <div class="cart-btn">
-                                    <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
-                                </div>
                             </div>
                         </div>
                         <!-- Nav End -->
@@ -98,7 +112,7 @@
     <div class="container">
         <div class="row d-flex flex-wrap align-items-center">
             <div class="col-12 col-md-6">
-                <a href="#"><img src=url({% static "img/core-img/logo.png" %}) alt=""></a>
+                <a href="#"><img src={% static "img/core-img/logo.png" %} alt=""></a>
                 <p class="copywrite-text">
                     <a href="#"></a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -110,11 +124,12 @@
             <div class="col-12 col-md-6">
                 <div class="footer-nav">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Albums</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="{% url 'song:home' %}">Home</a></li>
+                        <li><a href="albums-store.html">Songs</a></li>
+                        <li><a href="event.html">Artists</a></li>
+                        <li><a href="song/blog.html">Bands</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="elements.html">Profile</a></li>
                     </ul>
                 </div>
             </div>
@@ -134,6 +149,10 @@
 <script src="{% static 'js/plugins/plugins.js' %}"></script>
 <!-- Active js -->
 <script src="{% static 'js/active.js' %}"></script>
+
+<script src="{% static 'js/ajax/like_ajax.js' %}"></script>
+<script src="{% static 'js/ajax/create_comment.js' %}"></script>
+<script src="{% static 'js/jquery/search.js' %}"></script>
 <script>
     setTimeout(function () {
         if ($('#msg').length > 0) {
@@ -141,8 +160,7 @@
         }
     }, 5000)
 </script>
-{% block footer %}
-{% endblock %}
+
 </body>
 
 </html>
