--- a/CW/week21/MusicPlayer/templates/song/songs.html
+++ b/CW/week21/MusicPlayer/templates/song/songs.html
@@ -13,7 +13,7 @@
     <!-- ##### Breadcumb Area End ##### -->
 
     <!-- ##### Album Catagory Area Start ##### -->
-    <section class="album-catagory section-padding-100-0 mb-3">
+    <section class="album-catagory section-padding-100-0 mb-5" style="padding-top: 0 !important; padding-bottom: 5rem">
         <form action="{% url 'song:home' %}" method="GET">
             <div class="container">
                 <div class="row g-3 mt-2 justify-content-center">
