--- a/CW/week21/MusicPlayer/templates/base.html
+++ b/CW/week21/MusicPlayer/templates/base.html
@@ -17,6 +17,8 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <!-- bootstrap -->
+    <link rel="stylesheet" href="https://unpkg.com/@jarstone/dselect/dist/css/dselect.css">
+    <script src="https://unpkg.com/@jarstone/dselect/dist/js/dselect.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
@@ -35,7 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.9.5/htmx.min.js"></script>
 </head>
 
-<body>
+<body class="p-0">
 <!-- Preloader -->
 <div class="preloader d-flex align-items-center justify-content-center">
     <div class="lds-ellipsis">
@@ -153,6 +155,7 @@
 <script src="{% static 'js/ajax/like_ajax.js' %}"></script>
 <script src="{% static 'js/ajax/create_comment.js' %}"></script>
 <script src="{% static 'js/jquery/search.js' %}"></script>
+<script src="{% static 'js/ajax/add_song_to_playlist.js' %}"></script>
 <script>
     setTimeout(function () {
         if ($('#msg').length > 0) {
