--- a/CW/week21/MusicPlayer/templates/base.html
+++ b/CW/week21/MusicPlayer/templates/base.html
@@ -109,6 +109,61 @@
 {% block content %}
 {% endblock %}
 
+<!-- ##### Contact Area Start ##### -->
+<section class="contact-area section-padding-100 bg-img bg-overlay bg-fixed has-bg-img"
+         style="background-image: url({% static 'img/bg-img/bg-2.jpg' %});">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="section-heading white wow fadeInUp" data-wow-delay="100ms">
+                    <p>See what’s new</p>
+                    <h2>Get In Touch</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <!-- Contact Form Area -->
+                <div class="contact-form-area">
+                    <form action="" method="post" id="send_email">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-md-6 col-lg-4">
+                                <div class="form-group wow fadeInUp text-dark">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-4">
+                                <div class="form-group wow fadeInUp text-dark">
+                                    <input type="email" name="email" class="form-control" id="email"
+                                           placeholder="E-mail">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group wow fadeInUp text-dark">
+                                    <input type="text" name="subject" class="form-control" id="subject"
+                                           placeholder="Subject">
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-group wow fadeInUp text-dark">
+                                    <textarea style="color: blue !important;" name="message" class="form-control" id="message" cols="30" rows="10"
+                                              placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-12 text-center wow fadeInUp text-dark">
+                                <button class="btn oneMusic-btn mt-30" type="submit">Send <i
+                                        class="fa fa-angle-double-right"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ##### Contact Area End ##### -->
 <!-- ##### Footer Area Start ##### -->
 <footer class="footer-area">
     <div class="container">
