--- a/CW/week21/MusicPlayer/templates/base.html
+++ b/CW/week21/MusicPlayer/templates/base.html
@@ -27,6 +27,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/@jarstone/dselect/dist/css/dselect.css">
+    <script src="https://unpkg.com/@jarstone/dselect/dist/js/dselect.js"></script>
+
     <style>
         .row {
             align-content: space-around !important;
@@ -34,7 +37,6 @@
             justify-content: center !important;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.9.5/htmx.min.js"></script>
 </head>
 
 <body class="p-0">
@@ -148,7 +150,8 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-group wow fadeInUp text-dark">
-                                    <textarea style="color: blue !important;" name="message" class="form-control" id="message" cols="30" rows="10"
+                                    <textarea style="color: blue !important;" name="message" class="form-control"
+                                              id="message" cols="30" rows="10"
                                               placeholder="Message"></textarea>
                                 </div>
                             </div>
@@ -211,6 +214,7 @@
 <script src="{% static 'js/ajax/create_comment.js' %}"></script>
 <script src="{% static 'js/jquery/search.js' %}"></script>
 <script src="{% static 'js/ajax/add_song_to_playlist.js' %}"></script>
+<script src="{% static 'js/ajax/create_playlist.js' %}"></script>
 <script>
     setTimeout(function () {
         if ($('#msg').length > 0) {
@@ -218,7 +222,6 @@
         }
     }, 5000)
 </script>
-
 </body>
 
 </html>
