chore: define create play list section in search_result.html

--- a/CW/week21/MusicPlayer/templates/song/search_result.html
+++ b/CW/week21/MusicPlayer/templates/song/search_result.html
@@ -54,24 +54,31 @@
                         <div class="collapse ratio" style="--bs-aspect-ratio: 30%;"
                              id="collapseExample{{ song.id }}select">
                             <div class="alert" role="alert"><p id="msg1"></p></div>
-                            <form method="post" action="{% url 'social:update_playlist' %}" id="selectPlaylist"
-                                  class="align-items-center justify-content-center p-1">
-                                {% csrf_token %}
-                                <input type="hidden" name="song_id" value="{{ song.id }}">
-                                <input type="hidden" name="playlist_input" value="">
-                                <select name="playlist" id="dselect-example" class="form-control"
-                                        data-live-search="true">
-                                    <option value="" disabled selected>-- Choose a Playlist --</option>
-                                    {% for playlist in playlists %}
-                                        {% if song not in playlist.song_list %}
-                                            <option name="playlist_option"
-                                                    value="{{ playlist.id }}">{{ playlist.title }}</option>
-                                        {% endif %}
-                                    {% endfor %}
-                                </select>
-                                <button type="submit" class="btn oneMusic-btn mt-1"><i class="bi bi-check2-circle">Select</i>
-                                </button>
-                            </form>
+                            {% if playlists %}
+
+                                <form method="post" action="{% url 'social:update_playlist' %}"
+                                      id="selectPlaylist"
+                                      class="align-items-center justify-content-center p-0 m-0">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="song_id" value="{{ song.id }}">
+                                    <input type="hidden" name="playlist_input" value="">
+                                    <select name="playlist" id="dselect-example" class="form-select"
+                                            data-live-search="true" style="overflow-x: auto !important;">
+                                        <option value="" disabled selected>-- Choose a Playlist --
+                                        </option>
+                                        {% for playlist in playlists %}
+                                            {% if song not in playlist.song_list %}
+                                                <option name="playlist_option"
+                                                        value="{{ playlist.id }}">{{ playlist.title }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                    <button type="submit" class="btn oneMusic-btn mt-1"><i
+                                            class="bi bi-check2-circle">Select</i>
+                                    </button>
+                                    <div class="alert" role="alert"><p id="msg1"></p></div>
+                                </form>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
