--- a/CW/week21/MusicPlayer/templates/song/song_detail.html
+++ b/CW/week21/MusicPlayer/templates/song/song_detail.html
@@ -3,10 +3,10 @@
 {% block content %}
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb3.jpg);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/breadcumb3.jpg' %});">
         <div class="bradcumbContent">
             <p>See what’s new</p>
-            <h2>News</h2>
+            <h2>Song Info</h2>
             {% if messages %}
                 {% for message in messages %}
                     <div id="msg" class="alert {{ message.tags }}" role="alert">
@@ -22,83 +22,136 @@
 
     <!-- ##### Blog Area Start ##### -->
     <div class="blog-area section-padding-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-9">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-9">
 
-                    <!-- Single Post Start -->
-                    <div class="single-blog-post mb-100 wow fadeInUp" data-wow-delay="100ms">
-                        <!-- Post Thumb -->
-                        <div class="blog-post-thumb mt-30">
-                            <img style="width: 100% !important;height: fit-content !important;"
-                                 src='{{ song.cover_photo.url }}' alt="">
-                            <!-- Post Date -->
-                            <div class="post-date">
-                                <span>{{ song.upload_date.day }}</span>
-                                <span>{{ song.upload_date|date:"Y F" }}</span>
-                            </div>
+                <!-- Single Post Start -->
+                <div class="single-blog-post mb-100 wow fadeInUp" data-wow-delay="100ms">
+                    <!-- Post Thumb -->
+                    <div class="blog-post-thumb mt-30">
+                        <img src='{{ song.cover_photo.url }}' alt="">
+                        <!-- Post Date -->
+                        <div class="post-date">
+                            <span>{{ song.upload_date.day }}</span>
+                            <span>{{ song.upload_date|date:"Y F" }}</span>
                         </div>
-                        <!-- Blog Content -->
-                        <div class="blog-content">
-                            <!-- Post Title -->
-                            <p class="post-title">{{ song.title }}</p>
-                            <!-- Post Meta -->
-                            <div class="post-meta d-flex mb-30">
-                                <p class="post-author">
-                                    By
-                                    {% for artist in song.artists %}
-                                        <a href="#">
-                                            {{ artist.name }}{% if not forloop.last %}, {% endif %}
-                                        </a>
-                                    {% endfor %}
-                                </p>
-                                <p class="tags">genres:{% for genre in song.genre_list %}
-                                    {{ genre.name }}{% if not forloop.last %}, {% endif %}
-                                {% endfor %}</p>
-                                <p id="comment_count" class="tags">{{ song.comments|length }} Comments
-                                    {% if request.user.is_authenticated %}
-                                        <a data-toggle="collapse" href="#collapseExample" role="button"
-                                           aria-expanded="false"
-                                           aria-controls="collapseExample"
-                                           class="advanced text-decoration-none text-dark"><i class="bi bi-chat"></i>
-                                        </a>
-                                    {% endif %}
-                                </p>
+                    </div>
+                    <!-- Blog Content -->
+                    <div class="blog-content">
+                        <!-- Post Title -->
+                        <p class="post-title">{{ song.title }}</p>
+                        <!-- Post Meta -->
+                        <div class="post-meta d-flex mb-30">
+                            <p class="post-author">
+                                By
+                                {% for artist in song.artists %}
+                                    <a href="#">
+                                        {{ artist.name }}{% if not forloop.last %}, {% endif %}
+                                    </a>
+                                {% endfor %}
+                            </p>
+                            <p class="tags">genres:{% for genre in song.genre_list %}
+                                {{ genre.name }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}</p>
+                            <p id="comment_count" class="tags">{{ song.comments|length }} Comments
+                                {% if request.user.is_authenticated %}
+                                    <a data-toggle="collapse" href="#collapseExample" role="button"
+                                       aria-expanded="false"
+                                       aria-controls="collapseExample"
+                                       class="advanced text-decoration-none text-dark"><i class="bi bi-chat"></i>
+                                    </a>
+                                {% endif %}
+                            </p>
+                        </div>
+                        <!-- Post Excerpt -->
+                        <div class="song-play-area">
+                            <audio preload="auto" controls>
+                                <source src="{{ song.audio_file.url }}">
+                            </audio>
+                        </div>
+                        {% if request.user.is_authenticated %}
+                            <div class="p-2 m-2 text-left">
+                                <form action="{% url 'social:like' %}" id="like_form" method="post">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="like" value="{{ song.id }}">
+                                    <input type="hidden" name="like_input" {% if song.liked %}
+                                           value="unlike" {% else %} value="like" {% endif %}>
+                                    <button type="submit" name="like_button" class="border-0"
+                                            style="font-size: large !important;">
+                                        <i class="bi bi-heart-fill {% if song.liked %} like_red {% endif %}"></i>
+                                    </button>
+                                    <small id="like_count">{{ song.likes }}</small>
+                                    <a data-toggle="collapse" href="#collapseExample1"
+                                       role="button"
+                                       aria-expanded="false"
+                                       aria-controls="collapseExample"
+                                       class="advanced text-decoration-none text-dark ml-2">
+                                        <i class="bi bi-bookmark-plus"></i>
+                                    </a>
+                                </form>
                             </div>
-                            <!-- Post Excerpt -->
-                            <div class="song-play-area">
-                                <audio preload="auto" controls>
-                                    <source src="{{ song.audio_file.url }}">
-                                </audio>
+                            <div class="collapse blog-content" id="collapseExample">
+                                <div class="alert" role="alert"><p id="msg1"></p></div>
+                                <form method="post" action="{% url 'social:create_comment' %}" id="creat_comment"
+                                      class="align-items-center justify-content-center">
+                                    {% csrf_token %}
+                                    <p>{{ form }}</p>
+                                    <input type="hidden" name="song_id" value="{{ song.id }}">
+                                    <button type="submit" class="btn oneMusic-btn mt-30">Add</button>
+                                </form>
                             </div>
-                            {% if request.user.is_authenticated %}
-                                <div class="p-2 m-2 text-left">
-                                    <form action="{% url 'social:like' %}" id="like_form" method="post">
+                            <div class="collapse blog-content row justify-content-center align-items-center"
+                                 id="collapseExample1">
+                                <div class="col-6">
+                                    <form method="post" action="{% url 'social:create_playlist' %}"
+                                          id="createPlaylistForm"
+                                          class="align-items-center justify-content-center p-0 m-0">
                                         {% csrf_token %}
-                                        <input type="hidden" name="like" value="{{ song.id }}">
-                                        <input type="hidden" name="like_input" {% if song.liked %}
-                                               value="unlike" {% else %} value="like" {% endif %}>
-                                        <button type="submit" name="like_button" class="border-0"
-                                                style="font-size: large !important;">
-                                            <i class="bi bi-heart-fill {% if song.liked %} like_red {% endif %}"></i>
-                                        </button>
-                                        <small id="like_count">{{ song.likes }}</small>
-                                    </form>
-                                </div>
-                                </div>
-                                <div class="collapse blog-content" id="collapseExample">
-                                    <div class="alert" role="alert"><p id="msg1"></p></div>
-                                    <form method="post" action="{% url 'social:create_comment' %}" id="creat_comment"
-                                          class="align-items-center justify-content-center">
-                                        {% csrf_token %}
-                                        <p>{{ form }}</p>
                                         <input type="hidden" name="song_id" value="{{ song.id }}">
-                                        <button type="submit" class="btn oneMusic-btn mt-30">Add</button>
-                                        <div class="alert" role="alert"><p id="msg1"></p></div>
-
+                                        <div class="input-group mb-3">
+                                            <label for="creatPlaylist"></label>
+                                            {{ form1.as_p }}
+                                            <div class="input-group-append">
+                                                <button class="btn btn-outline-secondary" type="submit">Create</button>
+                                            </div>
+                                        </div>
                                     </form>
                                 </div>
-                            {% endif %}
+                                {% if playlists %}
+                                    <div class="col-12">
+                                        <form method="post" action="{% url 'social:update_playlist' %}"
+                                              id="selectPlaylist"
+                                              class="align-items-center justify-content-center p-0 m-0">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="song_id" value="{{ song.id }}">
+                                            <input type="hidden" name="playlist_input" value="">
+                                            <div class="justify-content-between d-flex row">
+                                                <div class="col-8">
+                                                    <select name="playlist" id="dselect-example" class="form-select"
+                                                            data-live-search="true">
+                                                        <option value="" disabled selected>-- Choose a Playlist --
+                                                        </option>
+                                                        {% for playlist in playlists %}
+                                                            {% if song not in playlist.song_list %}
+                                                                <option name="playlist_option"
+                                                                        value="{{ playlist.id }}">{{ playlist.title }}</option>
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    </select>
+                                                </div>
+                                                <div class="col-2">
+                                                    <button type="submit" class="btn oneMusic-btn mt-1"><i
+                                                            class="bi bi-check2-circle">Select</i>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                            <div class="alert" role="alert"><p id="msg1"></p></div>
+                                        </form>
+                                    </div>
+                                {% endif %}
+                            </div>
+                        {% endif %}
                         {% for comment in song.comments %}
                             {% if comment.approved %}
                                 <div class="blog-content">
@@ -116,5 +169,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
